@@ -323,6 +323,48 @@ operator|++
 name|i
 expr_stmt|;
 block|}
+elseif|else
+if|if
+condition|(
+name|logic
+operator|==
+name|ANDNOT
+condition|)
+block|{
+name|result
+operator|=
+operator|(
+name|BitSet
+operator|)
+name|chain
+index|[
+name|i
+index|]
+operator|.
+name|bits
+argument_list|(
+name|reader
+argument_list|)
+operator|.
+name|clone
+argument_list|()
+expr_stmt|;
+name|result
+operator|.
+name|flip
+argument_list|(
+literal|0
+argument_list|,
+name|reader
+operator|.
+name|maxDoc
+argument_list|()
+argument_list|)
+expr_stmt|;
+operator|++
+name|i
+expr_stmt|;
+block|}
 else|else
 block|{
 name|result
@@ -438,6 +480,51 @@ argument_list|)
 operator|.
 name|clone
 argument_list|()
+expr_stmt|;
+operator|++
+name|i
+expr_stmt|;
+block|}
+elseif|else
+if|if
+condition|(
+name|logic
+index|[
+literal|0
+index|]
+operator|==
+name|ANDNOT
+condition|)
+block|{
+name|result
+operator|=
+operator|(
+name|BitSet
+operator|)
+name|chain
+index|[
+name|i
+index|]
+operator|.
+name|bits
+argument_list|(
+name|reader
+argument_list|)
+operator|.
+name|clone
+argument_list|()
+expr_stmt|;
+name|result
+operator|.
+name|flip
+argument_list|(
+literal|0
+argument_list|,
+name|reader
+operator|.
+name|maxDoc
+argument_list|()
+argument_list|)
 expr_stmt|;
 operator|++
 name|i
