@@ -600,6 +600,130 @@ name|length
 argument_list|()
 argument_list|)
 expr_stmt|;
+name|chain
+operator|=
+operator|new
+name|ChainedFilter
+argument_list|(
+operator|new
+name|Filter
+index|[]
+block|{
+name|bobFilter
+block|}
+argument_list|,
+operator|new
+name|int
+index|[]
+block|{
+name|ChainedFilter
+operator|.
+name|AND
+block|}
+argument_list|)
+expr_stmt|;
+name|hits
+operator|=
+name|searcher
+operator|.
+name|search
+argument_list|(
+name|query
+argument_list|,
+name|chain
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+name|MAX
+operator|/
+literal|2
+argument_list|,
+name|hits
+operator|.
+name|length
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|"bob"
+argument_list|,
+name|hits
+operator|.
+name|doc
+argument_list|(
+literal|0
+argument_list|)
+operator|.
+name|get
+argument_list|(
+literal|"owner"
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|chain
+operator|=
+operator|new
+name|ChainedFilter
+argument_list|(
+operator|new
+name|Filter
+index|[]
+block|{
+name|bobFilter
+block|}
+argument_list|,
+operator|new
+name|int
+index|[]
+block|{
+name|ChainedFilter
+operator|.
+name|ANDNOT
+block|}
+argument_list|)
+expr_stmt|;
+name|hits
+operator|=
+name|searcher
+operator|.
+name|search
+argument_list|(
+name|query
+argument_list|,
+name|chain
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+name|MAX
+operator|/
+literal|2
+argument_list|,
+name|hits
+operator|.
+name|length
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|"sue"
+argument_list|,
+name|hits
+operator|.
+name|doc
+argument_list|(
+literal|0
+argument_list|)
+operator|.
+name|get
+argument_list|(
+literal|"owner"
+argument_list|)
+argument_list|)
+expr_stmt|;
 block|}
 DECL|method|testOR
 specifier|public
@@ -860,6 +984,76 @@ expr_stmt|;
 name|assertEquals
 argument_list|(
 literal|"bob"
+argument_list|,
+name|hits
+operator|.
+name|doc
+argument_list|(
+literal|0
+argument_list|)
+operator|.
+name|get
+argument_list|(
+literal|"owner"
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|chain
+operator|=
+operator|new
+name|ChainedFilter
+argument_list|(
+operator|new
+name|Filter
+index|[]
+block|{
+name|bobFilter
+block|,
+name|bobFilter
+block|}
+argument_list|,
+operator|new
+name|int
+index|[]
+block|{
+name|ChainedFilter
+operator|.
+name|ANDNOT
+block|,
+name|ChainedFilter
+operator|.
+name|ANDNOT
+block|}
+argument_list|)
+expr_stmt|;
+name|hits
+operator|=
+name|searcher
+operator|.
+name|search
+argument_list|(
+name|query
+argument_list|,
+name|chain
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|"ANDNOT bob ANDNOT bob matches all sues"
+argument_list|,
+name|MAX
+operator|/
+literal|2
+argument_list|,
+name|hits
+operator|.
+name|length
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|"sue"
 argument_list|,
 name|hits
 operator|.
